--- a/templates/backOffice/tabelaCarros.html
+++ b/templates/backOffice/tabelaCarros.html
@@ -37,6 +37,41 @@
             </tbody>
         </table>
     </div>
+
+    <!-- Add Modal -->
+    <div class="modal fade" id="addModal" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="addModalLabel">Adicionar Carro</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <div class="mb-3">
+                <label for="id" class="form-label">ID</label>
+                <input type="text" class="form-control" id="mId" name="id" />
+              </div>
+              <div class="mb-3">
+                <label for="Marca" class="form-label">Marca</label>
+                <input type="text" class="form-control" id="mMarca" name="Marca" />
+              </div>
+              <div class="mb-3">
+                <label for="Detalhes" class="form-label">Detalhes</label>
+                <input type="text" class="form-control" id="mDetalhes" name="Detalhes" />
+              </div>
+              <div class="mb-3">
+                <label for="Foto" class="form-label">Link da Foto</label>
+                <input type="text" class="form-control" id="mFoto" name="Foto" />
+              </div>
+              <button type="button" class="btn btn-primary" onclick="novoCarro()"><i class="fa-solid fa-floppy-disk"></i> Enviar</button>
+              <button type="reset" class="btn btn-success"><i class="fa-solid fa-shower"></i> Limpar</button>
+              <button type="button" class="btn btn-danger" data-bs-dismiss="modal" aria-label="Close"><i class="fa-solid fa-door-closed"></i> Fechar</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
  <!-- Add Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script>
@@ -62,7 +97,80 @@
             document.getElementById("cardCarros").innerHTML = strHtml;
         }
       listarCarros();
+
+
+      //modal function
+      const novoCarro= async () => {
+            var dados = {
+          id: document.getElementById("mId").value,
+          Marca: document.getElementById("mMarca").value,
+          Detalhes: document.getElementById("mDetalhes").value,
+          Foto: document.getElementById("mFoto").value,
+        };
+            //alert(dados.Marca) //alert(dados.Detalhes) //alert(dados.Foto)
+            fetch('http://localhost:4242/api/carros/create', {
+                method: 'POST',
+                headers: {'Content-Type': 'application/json'},
+                body: JSON.stringify(dados)
+            })
+            .then(response => {
+                // Verifica se a resposta foi bem sucedida
+                if (!response.ok) {
+                    throw new Error('Erro ao obter os dados');
+                }
+                // Converte a resposta para JSON
+                return response.json();
+            })
+            .then(data => {
+                 // Faz algo com os dados 
+                //console.log(data);
+                resposta="O carro com a marca: "+dados.Marca+" foi adicionado com sucesso!"
+                alert(resposta)
+                listarCarros();
+
+            })
+            .catch(error => {
+                // Captura qualquer erro de rede ou tratamento de erro
+                console.error('Houve um erro:', error);
+            });
+       
+        }
+
+        
+
+
+        const apagaCarro = async (id) => {
+        fetch("http://localhost:4242/api/carros/delete/" + id, {
+          method: "DELETE",
+          headers: { "Content-Type": "application/json" },
+        })
+          .then((response) => {
+            // Verifica se a resposta foi bem sucedida
+            if (!response.ok) {
+              throw new Error("Erro ao obter os dados");
+            }
+            return response;
+          })
+          .then((data) => {
+            // Faz algo com os dados
+            //console.log(data);
+            resposta = "O carro foi apagado com sucesso!";
+            alert(resposta);
+            listarCarros();
+          })
+          .catch((error) => {
+            // Captura qualquer erro de rede ou tratamento de erro
+            console.error("Houve um erro:", error);
+          });
+      };
+
+      
+
+
+      
     </script>
+
+
 </body>
 </html>
 
